[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres"] }
tide = { version = "0.16.0", features = ["sessions"] }
tokio = { version = "1.25.0", features = ["full"] }
tide-sqlx = "0.6.1"
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.17"
